utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/ExcludeIncludedModule3.ide
package valid

typedef module ExcludeIncludedModule3 {

}
