utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ExcludeIncludedModule2.ide
package invalid

typedef module ExcludeIncludedModule2 {

}
